<resources>
    <string name="app_name">Steward</string>
    <string name="title_money">money</string>
    <string name="title_tracker">Tracker</string>
    <string name="or_text">OR</string>
    <string name="authBackBtnId">authBackBtn</string>
    <string name="google_img">google image</string>
    <string name="authOutlineFieldLeadingIconId">authOutlineFieldLeadingIconId</string>
    <string name="authOutlineFieldTrailingIconId">authOutlineFieldTrailingIconId</string>
    <string name="authPasswordOutlineFieldLeadingIconId">authPasswordOutlineFieldLeadingIconId</string>
    <string name="authPasswordOutlineFieldTrailingIconId">authPasswordOutlineFieldTrailingIconId</string>
    <string name="pageFlowId">pageFlowId</string>
    <string name="error_icon">error_icon</string>
    <string name="screen_logo">screen_logo</string>
    <string name="passwordVisibilityBtnId">password visibility button</string>
    <string name="emailClearTextBtnId">email button</string>
    <string name="errorEmailMessage">EmailErrorMessage</string>
    <string name="errorPasswordMessage">PasswordErrorMessage</string>
    <string name="errorFirstNameMessage">FirstNameErrorMessage</string>
    <string name="errorLastNameMessage">LastNameErrorMessage</string>
    <string name="errorConfirmPasswordMessage">ConfirmPasswordErrorMessage</string>
    <string name="credentialErrorMessage">credentialErrorMessage</string>


    <!-- STARTUP SCREEN -->
    <string name="introduction_text">
        Greeting guest, welcome to Steward,
        peace be with you in our LORD GOD and of the LORD and
        survivor JESUS CHRIST
    </string>
    <string name="introduction_subText">
        Get to know how you\n
            use your money
    </string>
    <string name="startupContinueGuestId">continueGuestBtn</string>
    <string name="startup_continue_guest_text">Continue as guest</string>
    <string name="startup_google_text">USE GOOGLE</string>
    <string name="startup_mail_text">USE EMAIL</string>
    <string name="startUpScreenId">startUpScreen</string>
    <string name="startupGoogleBtnId">googleBtn</string>
    <string name="startupMailBtnId">mailBtn</string>
    <string name="startup_page_flow_img">startup page flow img</string>

    <!-- GOOGLE SCREEN -->
    <string name="googleScreenId">googleScreen</string>
    <string name="google_instruction_text">Register or login with</string>
    <string name="google_account_text">oogle account</string>
    <string name="googleDescriptionId">googleDescription</string>
    <string name="googleLoginBtnId">googleBtnLogin</string>
    <string name="google_login_text">LOGIN</string>
    <string name="googleRegisterBtnId">googleBtnRegister</string>
    <string name="google_register_text">REGISTER</string>
    <string name="google_page_flow_img">google page flow img</string>
    <string name="default_web_client_id">398768948931-lceu426h5ag9scmpn4epj8dug7ka7571.apps.googleusercontent.com</string>

    <!-- MAIL SCREEN -->
    <string name="mailScreenId">mailScreen</string>
    <string name="mailDescriptionId">mailDescription</string>
    <string name="mail_description_text">
        Register or login with\n
        Steward account
    </string>
    <string name="mail_img">mail_img</string>
    <string name="mailLoginBtnId">mailBtnLogin</string>
    <string name="mail_login_text">LOGIN</string>
    <string name="mailRegisterBtnId">mailBtnRegister</string>
    <string name="mail_register_text">REGISTER</string>
    <string name="mail_page_flow_img">mail page flow img</string>

    <!-- LOGIN SCREEN -->
    <string name="loginScreenId">loginScreen</string>
    <string name="loginDescriptionId">loginDescription</string>
    <string name="login_desc_text">
        Login your Steward \n
        account enter email address \n
        and password to get started
    </string>
    <string name="login_img">login_img</string>
    <string name="loginEmailFieldId">loginEmailField</string>
    <string name="loginEmailFieldPlaceholder">Email address</string>
    <string name="loginPasswordFieldId">loginPasswordField</string>
    <string name="loginPasswordPlaceholder">Enter your password</string>
    <string name="loginBtnId">Login button</string>
    <string name="login_btn_text">Login</string>
    <string name="login_page_flow_img">login page flow img</string>

    <!-- EMAIL REGISTER SCREEN -->
    <string name="emailRegisterScreenId">emailRegisterScreen</string>
    <string name="emailRegisterDescriptionId">emailRegisterDescription</string>
    <string name="email_register_desc_text">
        Create Steward account \n
        enter email address to get \n
        started
    </string>
    <string name="email_register_img">email_register_img</string>
    <string name="emailRegisterEmailFieldId">emailRegisterEmailField</string>
    <string name="emailRegisterEmailFieldPlaceholder">Email address</string>
    <string name="emailRegisterBtnId">Register button</string>
    <string name="email_register_btn_text">Next</string>
    <string name="email_register_page_flow_img">email register page flow img</string>

    <!-- NAMES REGISTER SCREEN -->
    <string name="nameRegisterScreenId">nameRegisterScreen</string>
    <string name="nameRegisterDescriptionId">nameRegisterDescription</string>
    <string name="name_register_desc_text">
        Let get to know you more,\n
        enter you names
    </string>
    <string name="name_register_img">name_register_img</string>
    <string name="nameRegisterFirstNameFieldId">nameRegisterFirstNameField</string>
    <string name="nameRegisterFirstNameFieldPlaceholder">First name</string>
    <string name="nameRegisterLastNameFieldId">nameRegisterLastNameField</string>
    <string name="nameRegisterLastNameFieldPlaceholder">Last name</string>
    <string name="nameRegisterBtnId">Register button</string>
    <string name="name_register_btn_text">Next</string>
    <string name="name_register_page_flow_img">name register page flow img</string>

    <!-- PASSWORD REGISTER SCREEN -->
    <string name="passwordRegisterScreenId">passwordRegisterScreen</string>
    <string name="passwordRegisterDescriptionId">passwordRegisterDescription</string>
    <string name="password_register_desc_text">
        What will be your Steward \n
        account password
    </string>
    <string name="password_register_img">password_register_img</string>
    <string name="passwordRegisterPasswordFieldId">passwordRegisterPasswordField</string>
    <string name="passwordRegisterPasswordFieldPlaceholder">Password</string>
    <string name="passwordConfirmRegisterPasswordFieldId">passwordConfirmRegisterPasswordField</string>
    <string name="passwordConfirmRegisterPasswordFieldPlaceholder">Confirm password</string>
    <string name="passwordRegisterBtnId">Register button</string>
    <string name="password_register_btn_text">Register</string>
    <string name="password_register_page_flow_img">password register page flow img</string>

    <!-- HOME SCREEN -->
    <string name="homeScreenId">homeScreen</string>

    <!-- NOTIFICATION -->
    <string name="channel_name">Steward Alarms</string>
    <string name="channel_description">Notifications for Steward routines and status updates</string>

</resources>
