...
    viewModel: RegisterViewModel,
    onNavigate: NavController? = null,
) {
    val uiState = viewModel.uiState.collectAsState()

    AuthInputLayout(
        screenId = R.string.emailRegisterScreenId,
        screenImgId = R.drawable.email_logo,
        descriptionId = R.string.emailRegisterDescriptionId,
        descriptionText = R.string.email_register_desc_text,
        pageFlowImgId = R.drawable.email_page_flow,
        nextPageButtonId = R.string.emailRegisterBtnId,
        nextPageButtonText = R.string.email_register_btn_text,
...
